# Visa-App

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  mcp-config.json
src/: handlers.rs  main.rs  main2.rs  models.rs  text.txt
src/config/: database.rs
src/middleware/: mod.rs  request_logging.rs
